# cother

./: BUILD_and_INSTALL_unix.sh  BUILD_and_INSTALL_unix__clang.sh  BUILD_and_INSTALL_win64.cmd  CMakeLists.txt  ChangeLog  LICENSE  README.md  cother.kdev4  rsync-uodas.sh
Linux_installer/: COTHER-installer1.sh
Linux_installer/var/: options.txt
cother-scores-optimizer/: Makefile  Makefile.PL  README.md  ddms-optimizer.make  ddms.cxx  ddms.h  ddms.i  ddms_wrap.cxx  dstable.h  makeddms2s-helper.sh  makeddms2s_mpi-helper.sh  plotmakeddms2s.sh
cother-scores-optimizer/blib/lib/: dalirun.pl  ddms.pm  makeddms2s++.pl  makeddms2s++_mpi.pl
src/: CMakeLists.txt
src/adddist/: CMakeLists.txt  adddist.cpp  adddist.h
src/cother/: CMakeLists.txt  cother.cpp  cother.h
src/db2bin/: CMakeLists.txt
src/env/: CMakeLists.txt
src/incconf/: localconfig.h
src/liblib/: msg.cpp  myfiler.cpp
src/libmycu/: CMakeLists.txt
src/libmycu/cualn/: AlnWriter.cpp  AlnWriterJSON.cpp
src/libmycu/cucom/: warpscan.cuh
src/libmycu/cupro/: CuBatchProcessing.cu  CuDbReader.cpp  CuDbReader.h  CuDeviceMemory.cu  CuDeviceMemory.cuh  IOProfileModel.h  IOProfileModelBin.cu  IOProfileModelTxt.cu  PM2DVectorFields.h  PMBatchProData.h  SerializedDstMatchScores.cuh  SerializedDstMatchScoresAttr.h  TdDataReader.cpp  TdDataReader.h
src/libmycu/cusco/: CuBatchScoreMatrix.cu  CuBatchScoreMatrix.cuh  CuBatchScoreMatrix_com.h  CuBatchScoreMatrix_ddms2s.cu  CuBatchScoreMatrix_ddms2s.cuh  CuBatchScoreMatrix_ddms2s_h2.cu  CuBatchScoreMatrix_ddms2s_h2.cuh  CuBatchScoreMatrix_ddms2s_v2.cu  CuBatchScoreMatrix_ddms2s_v2.cuh
src/libpro/srcpro/: CLOptions.cpp  CLOptions.h  Db.cpp  Db.h  MOptions.cpp  MOptions.h  PMProfileModel.cpp  PMProfileModel.h  PMTransModel.h
src/makecov/: CMakeLists.txt
src/makedb/: CMakeLists.txt  makedb.h
src/makepro/: CMakeLists.txt  makepro.cmd  makepro.cpp  makepro.h  makepro.sh  ssp2.pl
templates/: cpp
